[package]
name = "ha1ku"
version = "2.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
reqwest = { version = "0.12.23", features = ["blocking", "json"] }
rocket = "0.5.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_derive = "1.0.219"
serde_json = "1.0.143"
serde_urlencoded = "0.7.1"
